2016-05-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ambsdtar.c, application-src/amgtar.c
	  application-src/amstar.c: Define a AM_ERROR_RE
	* client-src/client_util.c (build_re_table): Keep DMP_ERROR
	* config/amanda/userid.m4: AC_SUBST(SINGLE_USERID)
	* perl/Amanda/Constants.pm.in.src: Add $SINGLE_USERID
	* installcheck/Installcheck/Application.pm: Parse negative size
	* installcheck/ambsdtar.pl, installcheck/amgtar.pl,
	  installcheck/amstar.pl: Resultdifer if $SINGLE_USERID is set

2016-05-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ambsdtar.c: selfcheck output is JSON, improve error
	  reporting
	* application-src/amgtar.c: Improve error reporting
	* application-src/amstar.c: selfcheck output is JSON, improve error
	  reporting
	* client-src/client_util.c: Fix error reporting
	* client-src/sendbackup.c: Fix error reporting
	* common-src/ammessage.c: Add messages from amstar and ambsdtar
	* installcheck/Installcheck/Application.pm: Fix to get error
	* installcheck/Makefile.am (client_tests): Add amstar
	* installcheck/ambsdtar.pl: Add new checks
	* installcheck/amgtar.pl: Add new checks
	* installcheck/amstar.pl: New file to check amstar behaviour

2016-05-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Extract.pm (BSU): Fix for non-application
	* perl/Amanda/FetchDump.pm: Add message 3300005
	* perl/Amanda/FetchDump/Application.pm: Return a 3300005 message if it
	  don't know how to extract the dump
	* perl/Amanda/Restore.pm: Fix
	* server-src/amfetchdump.pl: Check -O and --directory are not
	  different

2016-05-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Fix AWS4 auth-string

2016-05-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Set status of failed dle to inew status
	  TERMINATED_*

2016-05-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/CheckDump.pm: Use Xfer::Dest::Null for destination when